deployment/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-data-user-api
  labels:
    app: laa-data-user-api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: laa-data-user-api
  template:
    metadata:
      labels:
        app: laa-data-user-api
    spec:
      securityContext:
        runAsUser: 10000
        runAsNonRoot: true
      automountServiceAccountToken: false # Prevents the default service account token from being mounted, which is a security best practice when using IRSA
      containers:
        - name: laa-data-user-api
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          imagePullPolicy: Always
          securityContext:
            runAsUser: 10000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1200Mi"
              cpu: "300m"
            limits:
              memory: "3000Mi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 15
            periodSeconds: 10
